=========================== 0.8.11 ========================

2008-06-02  Tor Lillqvist  <tml@novell.com>

	Bug 536165 - Make libIDL correctly parse cl's pre-processor output

	* lexer.l: Further change needed when using MSVC's cl.exe as the
	preprocessor. Patch by Marcelo Vanzin.

2008-05-19  Tor Lillqvist  <tml@novell.com>

	Bug 522697 - Patch: make libIDL work with Microsoft's compilers

	Patch by Marcelo Vanzin, applied with modifications.

	* configure.in: Define Automake confitional OS_WIN32.

	* Makefile.am: Use --export-symbols libIDL.def on Windows.

	* Makefile.msc.in: Significant changes. Build a DLL with the same
	name as libtool does. Use pkg-config.

	* util.c: Make it work also in the !HAVE_CPP_STDIN && !HAVE_SYMLINK case.

	* util.h: Make __IDL_tmp_filename const.

	* include/libIDL/IDL.h.in: Rework the dllimport logic. Use
	LIBIDL_VAR to decorate imported variables, similar to
	GLIB_VAR. Unlike Marcelo's patch, I decided not to decorate
	functions. Maybe later I can be convinced it would be a good idea,
	but for now just use the .def file to export them and let them be
	imported automatically.

	* README.win32
	* libIDL.def: Update.

2008-03-18  Christian Persch  <chpe@gnome.org>

	* configure.in: Update glib version req. Bug #517088, patch by
	Mart Raudsepp.

======================= libIDL 0.8.10 =======================

2008-01-29  Christian Persch  <chpe@gnome.org>

	* autogen.sh: Fix autogen with automake 1.10.
	* NEWS:
	* configure.in: Update for 0.8.10.

2008-01-29  Christian Persch  <chpe@gnome.org>

	* include/libIDL/IDL.h.in: Use G_STRFUNC, since G_GNUC_PRETTY_FUNCTION
	was deprecated.

2007-09-24  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	reviewed by: Michael Meeks  <michael@ximian.com>

	* lexer.l: Ignore "command-line" in addition to "command
	line" when handling output from cpp . This fixes build
	problems when using newer toolchains, e.g. ORBIT2 can be
	compiled again with cpp >= 4.2. Fixes bug #474641, patch
	by Sebastian Bober.
